crates/context-macro/tests/constraints/missing_associated_token_pogram.fail.stderr
error: One constraint requires including the `Program<AtaTokenProgram>` account.
  --> tests/constraints/missing_associated_token_pogram.fail.rs:19:1
   |
19 | pub struct InitContext {
   | ^^^
